--- a/developer-portfolio/style.css
+++ b/developer-portfolio/style.css
@@ -1,19 +1,39 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 h1{ 
-    font size: 50 px;
+    font-size: 50 px;
+ 
 }
 .orange-color{
     color: orange;
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
-    padding left:5%;
+    padding-left:2%;
 }
 .half-width img{
-    width: 80%;
+    width:80%;
+}
+.link-button{
+    text-decoration: none;
+    padding: 10px 40px;
+    background-image: linear-gradient(orange,tomato);
+    color: white;
+    font-weight: 700;
+    border-radius: 5px;
+}
+.top-banner{
+    background-image:url(images/top-banner.png) ;
+    background-repeat: no-repeat ;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat ;
+    background-position: right;
 }
