--- a/developer-portfolio/style.css
+++ b/developer-portfolio/style.css
@@ -1,39 +1,81 @@
-body{
+body {
     font-family: 'Poppins', sans-serif;
-    margin: 0%;
+    margin: 0;
 }
-h1{ 
-    font-size: 50 px;
- 
+
+h1 {
+    font-size: 50px;
+
 }
-.orange-color{
+
+h2 {
+    font-size: 40px;
+}
+
+.orange-color {
     color: orange;
 }
-section{
+
+.flexible-container {
     display: flex;
     margin-bottom: 150px;
 }
-.half-width{
+
+.half-width {
     width: 50%;
-    padding-left:2%;
+    /*float: left;*/
+    padding-left: 2%;
+    /*margin-left: 5%;*/
 }
-.half-width img{
-    width:80%;
+
+.half-width img {
+    width: 80%;
 }
-.link-button{
+
+.link-button {
     text-decoration: none;
     padding: 10px 40px;
-    background-image: linear-gradient(orange,tomato);
+    background-image: linear-gradient(orange, tomato);
     color: white;
     font-weight: 700;
     border-radius: 5px;
 }
-.top-banner{
-    background-image:url(images/top-banner.png) ;
-    background-repeat: no-repeat ;
+
+.top-banner {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+    /*background-position: right;*/
 }
-.dream-big{
+
+.dream-big {
     background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat ;
+    background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+}
+
+#full-stack-developer {
+    border-left: 7px solid tomato;
+}
+
+#baby-web-developer {
+    border-left: 7px solid blue;
+}
+
+footer p {
+    text-align: center;
 }
